[gd_scene load_steps=2 format=2]

[ext_resource path="res://CM/UI/DataInput/DataItem.gd" type="Script" id=2]

[node name="DataItem" type="VBoxContainer" groups=["data_item"]]
margin_right = 1024.0
margin_bottom = 66.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Header" type="HBoxContainer" parent="."]
margin_right = 1024.0
margin_bottom = 22.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExpandButton" type="Button" parent="Header"]
margin_right = 19.0
margin_bottom = 22.0
text = "+"

[node name="ItemName" type="Label" parent="Header"]
margin_left = 23.0
margin_top = 3.0
margin_right = 57.0
margin_bottom = 19.0
text = "Item1"

[node name="SaveButton" type="Button" parent="Header"]
margin_left = 61.0
margin_right = 101.0
margin_bottom = 22.0
disabled = true
text = "Save"

[node name="DeleteButton" type="Button" parent="Header"]
margin_left = 105.0
margin_right = 157.0
margin_bottom = 22.0
text = "Delete"

[node name="RenameButton" type="Button" parent="Header"]
margin_left = 161.0
margin_right = 217.0
margin_bottom = 22.0
text = "Rename"

[node name="TransferButton" type="Button" parent="Header"]
margin_left = 221.0
margin_right = 287.0
margin_bottom = 22.0
hint_tooltip = "Transfer this item under a subtype class."
text = "Transfer"

[node name="TransferPopupMenu" type="PopupMenu" parent="Header/TransferButton"]
margin_right = 20.0
margin_bottom = 20.0

[node name="TransferConfirmationDialog" type="ConfirmationDialog" parent="Header/TransferButton"]
visible = true
margin_right = 152.0
margin_bottom = 82.0
rect_min_size = Vector2( 150, 52.5 )
window_title = "Potvrďte prosím..."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemFields" type="VBoxContainer" parent="."]
visible = false
margin_top = 24.0
margin_right = 1024.0
margin_bottom = 38.0

[node name="Labels" type="HBoxContainer" parent="ItemFields"]
margin_right = 1024.0
margin_bottom = 14.0

[node name="Label" type="Label" parent="ItemFields/Labels"]
margin_right = 180.0
margin_bottom = 14.0
rect_min_size = Vector2( 180, 0 )
text = "variable name"

[node name="Label2" type="Label" parent="ItemFields/Labels"]
margin_left = 184.0
margin_right = 364.0
margin_bottom = 14.0
rect_min_size = Vector2( 180, 0 )
text = "variable type"

[node name="Label3" type="Label" parent="ItemFields/Labels"]
margin_left = 368.0
margin_right = 548.0
margin_bottom = 14.0
rect_min_size = Vector2( 180, 0 )
text = "variable subtype"

[node name="Label4" type="Label" parent="ItemFields/Labels"]
margin_left = 552.0
margin_right = 732.0
margin_bottom = 14.0
rect_min_size = Vector2( 180, 0 )
text = "value"

[node name="Node" type="Node" parent="."]

[node name="DeleteConfirm" type="ConfirmationDialog" parent="Node"]
margin_left = 77.0
margin_top = -6.0
margin_right = 232.0
margin_bottom = 52.0
rect_min_size = Vector2( 150, 52.5 )
window_title = "Potvrďte prosím..."
dialog_text = "Do you really want to delete {name} item?"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RenameConfirm" type="ConfirmationDialog" parent="Node"]
margin_left = 77.0
margin_top = -6.0
margin_right = 232.0
margin_bottom = 52.0
rect_min_size = Vector2( 150, 52.5 )
window_title = "Potvrďte prosím..."
dialog_text = "Enter a new name."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewName" type="LineEdit" parent="Node/RenameConfirm"]
margin_left = 8.0
margin_top = 24.0
margin_right = 147.0
margin_bottom = 50.0

[connection signal="pressed" from="Header/ExpandButton" to="." method="_on_ExpandButton_pressed"]
[connection signal="pressed" from="Header/SaveButton" to="." method="_on_SaveButton_pressed"]
[connection signal="pressed" from="Header/DeleteButton" to="." method="_on_DeleteButton_pressed"]
[connection signal="pressed" from="Header/RenameButton" to="." method="_on_RenameButton_pressed"]
[connection signal="pressed" from="Header/TransferButton" to="." method="_on_TransferButton_pressed"]
[connection signal="index_pressed" from="Header/TransferButton/TransferPopupMenu" to="." method="_on_TransferPopupMenu_index_pressed"]
[connection signal="confirmed" from="Header/TransferButton/TransferConfirmationDialog" to="." method="_on_TransferConfirmationDialog_confirmed"]
[connection signal="confirmed" from="Node/DeleteConfirm" to="." method="_on_DeleteConfirm_confirmed"]
[connection signal="confirmed" from="Node/RenameConfirm" to="." method="_on_RenameConfirm_confirmed"]
